--- a/src/Button/Button.module.css
+++ b/src/Button/Button.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 6rem;
+  /*width: 6rem;*/
   padding: 0.5rem;
   z-index: 1;
   position: relative;
@@ -14,6 +14,10 @@
   background: linear-gradient(to right, #772020, #3175bf);
   color: white;
   box-shadow: 0 2px 12px -3px rgba(0, 255, 255, 0.5);
+}
+
+.Button:hover {
+  z-index: 2;
 }
 
 .BG {
